edit text to clarify that Threat Assessment documents should be removed from table

--- a/reports/sections/threats/ThreatMitigation.Rmd
+++ b/reports/sections/threats/ThreatMitigation.Rmd
@@ -141,7 +141,7 @@ knitr::kable(nonScheduleOne, align = "l", caption = "Documents containing threat
 ```
 
 ```{r sara-table, echo = FALSE, results = "asis"}
-knitr::kable(scheduleOne, align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species within the DFO Maritimes region and surrounding area that are listed in Schedule 1. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+knitr::kable(scheduleOne, align = "l", caption = "Documents containing threat and threat mitigation information for aquatic species within the DFO Maritimes region and surrounding area that are listed in Schedule 1. Documents included are those formally required by DFO as part of the SARA recovery planning process are provided. Threat Assessment documents are provided in separate tables. Some species may have several COSEWIC populations, which may trigger the creation of a separate series of documents for each population. In many of the datasets in this Report, the COSEWIC population may not be known. Instead, documents have been compiled for all COSEWIC populations within the Maritimes region and surrounding area. Readers of the Report should use their best judgment to determine which set of documents may be the most applicable based on the search area. Blank entries in the table may be present for various reasons, for example, the document may still in progress but not yet published, or was not created due to a lack of resources. In addition, some documents may not be required based on the COSEWIC designation. RPAs are typically not created for species with a COSEWIC status of special concern. Recovery Strategies and Action Plans are created for species with a SARA designation of threatened, extirpated or endangered, while Management Plans are instead created for species with a SARA designation of special concern. RPA Research Documents may only be available in French for several species found within the Quebec region. The documents and species listed in this table are current as of December 2021. New documents or changes in listings may take place as the recovery planning process progresses.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 There are three available Threat assessment documents for Schedule 1 species in the Maritimes region. 
