--- a/reports/sections/sturg/sturg_fr.Rmd
+++ b/reports/sections/sturg/sturg_fr.Rmd
@@ -63,7 +63,7 @@ if (!is.null(sturgOutputList$studyData)) {
 ```{r sturg-table, echo=FALSE, results='asis', caption="MPA table"}
 if (!is.null(sturgOutputList$studyData)) {
   sturgTable <- dplyr::select(sturgOutputList$studyData, c("siteId", "Site"))
-  st_geometry(sturgTable) <- NULL
+  sf::st_geometry(sturgTable) <- NULL
   row.names(sturgTable) <- NULL
   names(sturgTable) <- c("Site Id", "Site")
   knitr::kable(sturgTable, align="l", caption="Quality Tier: High Security level: none. Names of Survey sites for Atlantic Sturgeon Foraging Areas sampled during 2020.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
