--- a/app/templates/EN/species/NSARP_dist_crithab.Rmd
+++ b/app/templates/EN/species/NSARP_dist_crithab.Rmd
@@ -9,3 +9,11 @@ DFO’s Species at Risk Program is responsible for carrying out DFO’s mandate 
 DFO’s Species at Risk Program has published Species at Risk distribution/range and critical habitat maps on the Government of Canada Open Data portal, and it has also developed internal and public interactive National Species at Risk Mapping Tools. As described by the National Species at Risk Mapping Tool - Frequently Asked Questions (http://dfonl7swvgip001/NationalSARDemo/LinkDocs/Help/FAQsEN_FR.pdf), the Species at Risk Program in the National Headquarters (NHQ) initiated the tool to facilitate project assessment under the _Fisheries Act_ and SARA. It uses a Geographic Information System (GIS) and interactive display of reproducible, spatially-referenced data for aquatic SARA-listed species. The data contained in the tool are maintained by regional SARA program offices, coordinated by the NHQ Species at Risk Program (Steering Committee). Data are added in concert with the development of SARA recovery documents and SARA listing timelines.
 
 This report is *not* the authoritative advice on Species at Risk data. Please access the Species at Risk GIS tool mentioned above to create an authoritative report, particularly if any of the data sources are at, or near, the search area. Below, we provide a list and examination of data products that may overlap with the user-defined search area.
+
+### **Species at Risk distribution and Critical Habitat data**    
+
+```{r child = here::here("reports/sections/sardist/sardist_en.Rmd")}
+```
+
+```{r child = here::here("reports/sections/crithab/crithab_en.Rmd")}
+```
