update references (OBIS, GBIF, and iNaturalist)

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -36,6 +36,19 @@ howpublished = {Retrieved from https://waves-vagues.dfo-mpo.gc.ca/Library/339227
 year = {2009}
 }
 
+@misc{GBIF,
+  author = {GBIF},
+  year = {2022},
+  howpublished = {The Global Biodiversity Information System (GBIF). What is GBIF? www.gbif.org/what-is-gbif. Accessed: 2022-04-29}
+}
+
+@misc{iNaturalist,
+  author = {iNaturalist},
+  year = {2022},
+  howpublished = {iNaturalist Observations. https://www.inaturalist.org/observations. Accessed: 2022-04-29}
+}
+
+
 @techreport{Jones2018EF,
   author = {Jones, R. A. and Ratelle, S. M. and Tuziak, S. M. and Harvie, C. and Lenentine, B. and O’Reilly, P. T.},
   title = {Review of the IBoF Atlantic Salmon (Salmo salar) Monitoring Activities Associated with the Live Gene Bank, 2018 – Appendix 9},
@@ -93,8 +106,8 @@ year = {2018}
 
 @misc{OBIS,
   author = {OBIS},
-  year = {2021},
-  howpublished = {Ocean Biodiversity Information System (OBIS). Intergovernmental Oceanographic Commission of UNESCO. www.obis.org. Accessed: 2021-01-21}
+  year = {2022},
+  howpublished = {Ocean Biodiversity Information System (OBIS). Intergovernmental Oceanographic Commission of UNESCO. www.obis.org. Accessed: 2022-04-29}
 }
 
 @misc{OpenData_blue_imphabitat,
