--- a/reports/sections/ilts/ilts_en.Rmd
+++ b/reports/sections/ilts/ilts_en.Rmd
@@ -35,6 +35,11 @@ From [@ILTS]: “An annual trawl survey is conducted in Southwestern Nova Scotia
 ```{r ilts-results, include=FALSE, cache=FALSE}
 iltsClipped <- master_intersect(ilts_rr$data_sf, mapDataList)
 
+iltsClipped$regionData <- NULL
+iltsClipped$mapData <- NULL
+iltsClipped$studyData <- NULL
+
+
 tableList <- create_sar_tables(iltsClipped$studyData, listed_species)
 iltsAllTable <- tableList$allSpecies
 iltsSarTable <- tableList$sarData
