Add Species at Risk Act (SARA, 2002) to bib file

--- a/app/data/mybiblio.bib
+++ b/app/data/mybiblio.bib
@@ -372,6 +372,14 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   url = {https://CRAN.R-project.org/package=rgdal}
 }
 
+@Manual{SARA2002,
+  title = {An act respecting the protection of wildlife species at risk in Canada},
+  author = {{SARA}},
+  organization = {Species at Risk Act},
+  year = {2002},
+  url = {https://laws.justice.gc.ca/eng/acts/S-15.3/FullText.html},
+}
+
 @Article{sf,
   author = {Edzer Pebesma},
   title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
@@ -383,6 +391,10 @@ author = {Noreen E. Kelly and Javier Guijarro-Sabaniel and Rebecca Zimmerman},
   volume = {10},
   number = {1},
 }
+
+
+
+
 
 @Manual{stars,
   title = {stars: Spatiotemporal Arrays, Raster and Vector Data Cubes},
