--- a/reports/Modus-operandi-RAP.Rmd
+++ b/reports/Modus-operandi-RAP.Rmd
@@ -18,7 +18,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## The Strategic Reproducible Analytical Pipeline (RAP) Initiative
 
-The Strategic Science Planning and Program Integrity (SSPPI) division in DFO Maritimes supports various projects and presents many opportunities to modernize data management and reporting practices. In 2018, requests to the division to identify and summarize the available DFO and non-DFO datasets within the Maritimes Region were becoming increasingly frequent. Born out of frustration and a need for swift and effective approaches, a team of self-proclaimed Strategic Reproducible Analytical Pipeline (RAP) Champions was formed to automate the creation of these Reports. The primary objective of this initiative has been to develop a web-based tool to generate Reproducible Reports to identify and describe DFO and non-DFO datasets within a user-defined area. Specifically, this project address internal requests that support processes that provide frequent and standardized advice, such as CSAS, Marine Spatial Planning, Aquaculture Siting Responses, and Environmental Response, which have an emphasis on Species at Risk.
+The Strategic Science Planning and Program Integrity (SSPPI) division in DFO Maritimes supports various projects and presents many opportunities to modernize data management and reporting practices. In 2018, requests to the division to identify and summarize the available DFO and non-DFO datasets within the Maritimes Region were becoming increasingly frequent. Born out of frustration and a need for swift and effective approaches, a team of self-proclaimed Strategic Reproducible Analytical Pipeline (RAP) Champions was formed to automate the creation of these Reports. The primary objective of this initiative has been to develop a web-based tool to generate Reproducible Reports to identify and describe DFO and non-DFO datasets within a user-defined geographic area. Specifically, this project address internal requests that support processes that provide frequent and standardized advice, such as CSAS, Marine Spatial Planning, Aquaculture Siting Responses, and Environmental Response, which have an emphasis on Species at Risk.
+
 
 As Strategic RAP Champions, we strive for an open and understanding culture within our group. How we implement this is constantly evolving and changing. However, we believe that digital tools can enhance the work we do to effectively collaborate with a growing network of internal and external partners (including organizations outside of Canada). Our focus on co-creation remains key for prioritization and accountability, to ensure that our work is truly helpful to DFO. We also value the continued advancement of new skills, intrinsic curiosity, and the pursuit of new opportunities, and this has been a major factor in our success in overcoming various frustrating obstacles. We acknowledge that there is no perfect balance for managing these competing and conflicting tasks and interests, but this can be at least partially remedied by continuous scope prioritization and close cooperation within our team (Bjarnason et al., 2012). Although we are highly ambitious, we consider it especially important to have reasonable expectations for ourselves and team members, given the backdrop of the COVID-19 pandemic, and other challenging personal and global events that can hinder workplace productivity and wellbeing (Cleary et al., 2020; Sigahi et al., 2021).
 
